src/test/deca/codegen/invalid/division_zero_ob.deca
// Description:
//    division par 0.0
//
// Resultats:
//  erreur
//
// Historique:
//    cree le 23/01/2017

class A{
  float div(float x,float y){
    return x/y;
  }
}
{
A test = new A();
print(test.div(1.0,0.0));
}
